# Bitethereum-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bite-genesis.json.REMOVED.git-id  test-new.json  test.json
airdrop/: readme.txt
libraries/: CMakeLists.txt
libraries/app/: application.cpp  database_api.cpp  impacted.cpp
libraries/app/include/graphene/app/: database_api.hpp
libraries/btc/: CMakeLists.txt
libraries/btc/btc_key/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  airdrop_balance_evaluator.cpp  db_init.cpp  db_maint.cpp  db_notify.cpp  witness_evaluator.cpp
libraries/chain/include/graphene/chain/: airdrop_balance_evaluator.hpp  airdrop_balance_object.hpp  asset_evaluator.hpp  config.hpp  database.hpp  genesis_state.hpp  global_property_object.hpp  witness_evaluator.hpp  witness_object.hpp
libraries/chain/include/graphene/chain/protocol/: address.hpp  balance.hpp  chain_parameters.hpp  operations.hpp  types.hpp  vote.hpp  witness.hpp
libraries/chain/protocol/: address.cpp  operations.cpp  transaction.cpp
libraries/db/include/graphene/db/: object.hpp
libraries/eth/: CMakeLists.txt
libraries/eth/libdevcore/: Common.cpp  OverlayDB.cpp  OverlayDB.h  Worker.h
libraries/wallet/: wallet.cpp
libraries/wallet/include/graphene/wallet/: wallet.hpp
programs/build_helpers/: member_enumerator.cpp
programs/cli_wallet/: main.cpp
programs/genesis_util/: convert_address.cpp  get_dev_key.cpp
programs/witness_node/: main.cpp
tests/test_doc/: witness_deposit
